--- a/src/components/Nav/Navbar.module.scss
+++ b/src/components/Nav/Navbar.module.scss
@@ -38,9 +38,11 @@ header {
 }
 nav {
   margin: 0 auto 100px;
+  width: 100%;
   height: 55px;
   background-color: white;
   position: fixed;
+  justify-content: space-around;
 }
 .buttonLogin {
   border: none !important;
