--- a/src/components/Nav/Navbar.module.scss
+++ b/src/components/Nav/Navbar.module.scss
@@ -38,11 +38,17 @@ header {
 }
 nav {
   margin: 0 auto 100px;
+  max-width: 1250px;
   width: 100%;
   height: 55px;
   background-color: white;
   position: fixed;
   justify-content: space-around;
+}
+.leftSide {
+  flex-wrap: wrap;
+  justify-content: left !important;
+  display: inline-block;
 }
 .buttonLogin {
   border: none !important;
@@ -61,19 +67,23 @@ nav {
 }
 .navbar {
   max-width: 1250px;
+  justify-content: space-around;
 }
 .elementos {
   margin-left: 305px;
 }
-.offcanvas {
-  max-width: 250px !important;
-  li {
+.offcanvasElement {
+  &:hover {
+    background-color: rgb(234, 236, 252) !important;
+  }
+}
+.offcanvasT {
+  max-width: 280px !important;
+
+  li span {
     display: block;
     text-decoration: none;
     padding: 8px;
-    &:hover {
-      background-color: rgb(234, 236, 252) !important;
-    }
   }
   a {
     text-decoration: none;
